--- a/assets/AssetManifest.json
+++ b/assets/AssetManifest.json
@@ -1,1 +1,1 @@
-{"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
+{"assets/sounds/.DS_Store":["assets/sounds/.DS_Store"],"assets/sounds/cancel.mp3":["assets/sounds/cancel.mp3"],"assets/sounds/elimination.mp3":["assets/sounds/elimination.mp3"],"packages/cupertino_icons/assets/CupertinoIcons.ttf":["packages/cupertino_icons/assets/CupertinoIcons.ttf"]}
